# wine-quality-prediction

./: .gitignore  README.md  app.py  main.py  pyproject.toml
artifacts/data_transformation/: test.csv  train.csv
artifacts/model_evaluation/: metrics.json
artifacts/model_trainer/: model.joblib
config/: config.yaml
src/wine_quality/: __init__.py  exception.py  logger.py
src/wine_quality/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py  reporting.py
src/wine_quality/configuration/: configuration.py
src/wine_quality/entity/: config_entity.py
src/wine_quality/pipeline/: prediction.py  reporting.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/wine_quality/utils/: common.py
static/css/: style.css
static/js/: app.js
templates/: index.html
