[project]
name = "wine-quality-ml-project"
version = "0.1.0"
description = "Wine quality prediction with a staged ML pipeline and Flask interface."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pandas",
    "mlflow==2.2.2",
    "notebook",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "python-box==6.0.2",
    "pyyaml",
    "tqdm",
    "ensure==1.0.2",
    "joblib",
    "types-pyyaml",
    "flask",
    "flask-cors",
    "setuptools==65.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wine_quality"]
